# hubspot-cli

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  pyproject.toml
scripts/: build.sh  extract-changelog.sh  release.sh  tag-release.sh
skills/hubspot/: SKILL.md
src/: __init__.py  __main__.py  cli.ts  client.py  client.ts  hubspot.py  hubspot.ts  index.ts  skill-path.ts
tests/: hubspot.test.ts  test_hubspot.py
